--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -12,7 +12,7 @@
     height: 60px;
 }
 
-img {
+.header img {
     margin: 5px;
 }
 
@@ -24,7 +24,7 @@ h1 {
     font-family:sans-serif;
 }
 
-span {
+.header .micro {
     color:#FF4500;
 }
 
