--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -1,3 +1,115 @@
+.posts-wrapper {
+    display: flex;
+    flex-shrink: 5;
+    flex-direction: column;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 1px solid white;
+    width: fit-content;
+    margin: auto;
+}
+
 .posts-wrapper .post {
     display: grid;
+    width: 100%;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-areas:
+        "post-title"
+        "post-body"
+        "post-footer";
+
+    background-color: black;
+    color: white;
+}
+
+.posts-wrapper .post .post-title{
+    grid-area: post-title;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+}
+
+.posts-wrapper .post .post-body{
+    grid-area: post-body;
+
+}
+
+.posts-wrapper .post .post-footer{
+    grid-area: post-footer;
+    display: flex;
+    justify-content: center;
+}
+
+.posts-wrapper .post .post-title > .subreddit-image {
+    min-width: 16px;
+    min-height: 16px;
+    max-width: 16px;
+    max-height: 16px;
+    margin: 0px 5px;
+    border-radius: 50%;
+}
+
+.posts-wrapper .post .post-title > .subreddit-name {
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.posts-wrapper .post .post-title > .post-user {
+    font-size: 15px;
+    padding-left: 20px;
+}
+
+.posts-wrapper .post .post-title > .post-user:hover {
+    text-decoration: underline;
+}
+
+.posts-wrapper .post .post-body > .title {
+    font-size: 21px;
+    font-weight: 600;
+    margin-left: 5px;
+    display: block;
+}
+
+.post-wrapper .post .post-body > video {
+    width: 100%;
+}
+
+.post-wrapper .post .post-body > img {
+    display: flex;
+    flex-shrink: 5;
+    flex-grow: 5;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    max-height: 500px;
+    min-width: 500px;
+    margin-bottom: 5px;
+}
+
+.posts-wrapper .post .post-body > .description {
+    display: block;
+    margin-top: 10px;
+    margin-left: 5px;
+}
+
+.posts-wrapper .post .post-footer .footer-action {
+    display: flex;
+    align-items: center;
+}
+
+
+.posts-wrapper .post .post-footer .icon {
+    font-size: 16px;
+    margin: 10px 5px 10px 40px;
+    width: fit-content;
+}
+
+.posts-wrapper .post .post-footer span {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.posts-wrapper .post .post-footer .heart {
+    color: red;
 }
